# NewPeople

./: .env.example  .gitignore  .replit  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  start.bat  start.sh
attached_assets/: 933112ae-db48-429a-aeef-53c7fccf22df_1764116917197.jfif
backend/: Dockerfile  init_db.py  main.py  requirements.txt
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/routers/: admin_notifications.py  appeals.py  auth.py  categories.py  statuses.py  tags.py  users.py
backend/app/schemas/: schemas.py
backend/app/services/: telegram_notifier.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppealCard.tsx  AppealDetail.tsx  CategorySelector.tsx  FileUpload.tsx  LoadingScreen.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminDashboard.tsx  Login.tsx  ModeratorDashboard.tsx  MyAppeals.tsx  PublicAppealForm.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
telegram_bot/: Dockerfile  config.py  database.py  handlers.py  keyboards.py  main.py  notification_service.py  requirements.txt
